fixed text alignment

--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -7,13 +7,17 @@
 
     &-title
         font-size: 22px
+    h2
+        margin-bottom: 10px
+
+    .pu-paragraph
+        margin-bottom: 10px
 
     time 
         line-height: 1.6em
         color: $color-text-subtle
         font-weight: bold 
         font-size: 14px
-        margin-top: 5px
 
     .pu-button-edit
         opacity: 0
